--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,9 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+span.whitening {
+  color: white;
+}
+h1.h1-900 {
+  font-weight: 900;
+}
