--- a/src/library.scss
+++ b/src/library.scss
@@ -1,4 +1,8 @@
 html {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 14px;
-}
+} 
+$color1: #009688;
+$color2: #FFA000;
+$color3: #5677fc;
+$color4: #d34836;
