--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 span.whitening {
   color: white;
 }
-h1.h1-900 {
+h1.font-900 {
   font-weight: 900;
+}
+.text-center {
+  text-align: center;
+}
+.text-left {
+  text-align: left;
+}
+.text-right {
+  text-align: right;
 }
