--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,15 @@
 <nav id="homeNav">
-	<a [hidden]="getTag() == '' || getTag() == 'edde'" href="#edde" id="logo">EDDE</a>
+	<a [hidden]="getTag() == '' || getTag() == 'home'" href="#edde" id="logo">EDDE</a>
 	<div [hidden]="false" id="navbar-center"><!--[hidden]="when scroll is top"-->
 		<a [ngClass]="{'active': getTag()=='about'}" href="#about">About</a>
 		<a [ngClass]="{'active': getTag()=='contact'}" href="#contact">Contact</a>
 	</div>
 </nav>
 <div class="homeContainer">
-	<div id="edde">
-		<img src="../../assets/EDDE.jpg">
+	<div id="home">
+		<!-- <img src="../../assets/EDDE.jpg"> -->
+			<img src="../../assets/edward.jpg">
+		<div class="intro" [innerHTML]="aboutText"></div>
 	</div>
 	<div id="about">
 		<div class="aboutMe" [innerHTML]="aboutText"></div>
@@ -16,5 +18,8 @@
 		<div class="contactBox">
 
 		</div>
+	</div>
+	<div id="extra">
+
 	</div>
 </div>
