angular material applied

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,6 +10,7 @@
 		<!-- <img src="../../assets/EDDE.jpg"> -->
 			<img src="../../assets/edward.jpg">
 		<div class="intro" [innerHTML]="aboutText"></div>
+		<button>Contact</button>
 	</div>
 	<div id="about">
 		<div class="aboutMe" [innerHTML]="aboutText"></div>
