material added and test

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,9 +7,9 @@
 </nav>
 <div class="homeContainer">
 	<div id="home">
-		<!-- <img src="../../assets/EDDE.jpg"> -->
-			<img src="../../assets/edward.jpg">
-		<div class="intro" [innerHTML]="aboutText"></div>
+		<img src="../../assets/edward.jpg">
+		<div class="home" [innerHTML]="aboutText"></div>
+		<button mat-raised-button>Contact</button>
 	</div>
 	<div id="about">
 		<div class="aboutMe" [innerHTML]="aboutText"></div>
