--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,11 +12,11 @@
 	a {
 		font-size: 3rem;
 		color: white;
-		font-weight: 900;
+		font-weight: 500;
 		text-decoration: none;
 		text-align: center;
 		padding: 1rem;
-		line-height: 4rem;
+		line-height: 3rem;
 		float: left;
 	}
 	a:hover, a.active {
@@ -42,10 +42,7 @@
 		}
 		.home {
 			width: 70%;
-			margin-top: 5%;
-		}
-		button {
-			font-size: 1.3rem;
+			margin-top: 4rem;
 		}
 	}
 	& #about {
@@ -54,14 +51,14 @@
 			width: 70%;
 		}
 	}
-	& #contact {
+	& #skills {
 		background-color: $color3;
 		.contactBox {
 			width: 50%;
 		}
 	}
 	
-	& #extra {
+	& #work {
 		background-color: $color4;
 	}
 }
