--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -18,6 +18,7 @@
 		padding: 1rem;
 		line-height: 3rem;
 		float: left;
+		&:hover { cursor: pointer }
 	}
 	a:hover, a.active {
 		background-color: white;
@@ -61,4 +62,24 @@
 	& #works {
 		background-color: $color4;
 	}
+}
+
+div.btn-move {
+	position: fixed;
+	right: 0px;
+	bottom: 0px;
+	width: 3rem;
+	height: 3rem;
+	margin-right: 3rem;
+	margin-bottom: 7rem;
+	float: left;
+	span {
+		border-radius: 100%;
+		background-color: rgba(0,0,0,0.5);
+		color: white;
+		padding: 1rem;
+		margin: 0.5rem;
+		&:hover { cursor: pointer; }
+	}
+	
 }
