--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,11 +4,7 @@
 		<a [ngClass]="{'active': getTag()=='about'}" (click)="scroller('about')">About</a>
 		<a [ngClass]="{'active': getTag()=='skills'}" (click)="scroller('skills')">Skills</a>
 		<a [ngClass]="{'active': getTag()=='works'}" (click)="scroller('works')">Works</a>
-		<!-- <a [ngClass]="{'active': getTag()=='about'}" href="#about">About</a>
-		<a [ngClass]="{'active': getTag()=='skills'}" href="#skills">Skills</a>
-		<a [ngClass]="{'active': getTag()=='works'}" href="#works">Works</a> -->
 		<a >Contact</a>
-		<!-- <a [ngClass]="{'active': getTag()=='contact'}" href="#contact">Contact</a> -->
 	</div>
 </nav>
 <div class="homeContainer">
@@ -17,18 +13,50 @@
 	<div id="home" class="container" hidden="getTag() != '' && getTag() != 'home">
 		<img src="../../assets/edward.jpg">
 		<div class="home box">
-			<h1 class="font-900 text-center">Hello, I'm <span class="whitening">ED</span>ward, a <span class="whitening">DE</span>veloper.</h1><br />
-			<h3 class="text-center">As a <span class="whitening">Frontend Developer</span>, I have wide range of programming skills and experiences including <span class="whitening">Angular, React, jQuery,</span> to name but a few.<br /></h3>
-			<h3 class="text-center">I am actively looking for a job in <span class="whitening">Toronto</span>, ON, CA area<br /></h3>
-			<h3 class="text-center">Feel free to take a look at my profile, resume, and projects and 
-			if you're interested, please let me know.<br /></h3>
+			<h1 class="font-900 text-center">Hello,</h1>
+			<h2 class="font-700 text-center">I'm <span class="whitening">ED</span>ward, a <span class="whitening">DE</span>veloper.</h2><br />
+			<h2 class="text-center">A Front-End Developer in <span class="whitening">Toronto</span>, ON, Canada</h2>
 		</div>
-		<button mat-raised-button>Contact</button>
+		<button mat-raised-button>Contact Me</button>
 	</div>
 
 	<!-- about -->
 	<div id="about" class="container" [hidden]="getTag() != 'about'">
-		<div class="about box" [innerHTML]="aboutText"></div>
+		<div class="about box">
+	
+			<!-- About Me -->
+			<div class="about contents">
+				<h3>As a <span class="whitening">Frontend Developer</span>, I have wide range of programming skills and experiences including <span class="whitening">Angular, React, jQuery,</span> to name but a few.<br /></h3>
+				<h3>I would like to obtain a position to learn, innovate and collaborate with a team as a developer that will further my knowledge and expertise in the web development field</h3>
+			</div>
+	
+			<mat-divider></mat-divider>
+
+			<!-- Work History -->
+			<div class="history contents">
+				<mat-card>
+					Work Histories
+					<button class="mat-button pull-right" (click)="accordion.closeAll()">Collapse All</button>
+				</mat-card>
+				<mat-accordion>
+					<mat-expansion-panel hideToggle *ngFor="let history of historyText">
+						<mat-expansion-panel-header>
+							<mat-panel-title>
+								<img src={{history.logoUrl}}/><span>{{history.company}}</span>
+							</mat-panel-title>
+							<mat-panel-title class="position">
+								<span>{{history.position}}</span>
+							</mat-panel-title>
+							<mat-panel-description>
+								<span>{{history.period}}</span>
+							</mat-panel-description>
+						</mat-expansion-panel-header>
+						<p innerHTML = "{{history.description}}"></p>
+					</mat-expansion-panel>
+					
+				</mat-accordion>
+		</div>
+		</div>
 	</div>
 
 	<!-- skills -->
